fix(checkout-prefill): adjust body overflow behavior and refine header styling in prefill container

--- a/impact/app/styles/modules/checkout-prefill.scss
+++ b/impact/app/styles/modules/checkout-prefill.scss
@@ -22,6 +22,7 @@
   min-width: 320px;
   max-height: 85vh;
   padding: 20px;
+  padding-top: 0;
   background: #fff;
   border-radius: 5px;
   overflow-y: auto;
@@ -31,8 +32,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
-    margin-bottom: 20px;
+    width: calc(100% + 40px);
+    position: sticky;
+    top: 0;
+    margin: -20px -20px 40px -20px;
+    padding: 15px;
+    border-bottom: 1px solid #838383;
+    background-color: #fff;
 
     h2 {
       color: #141414;
